[package]
name = "libp2p-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "libp2p-chat"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.55", features = [
    "tcp", 
    "dns", 
    "noise", 
    "yamux", 
    "ping",
    "identify",
    "kad",
    "gossipsub", 
    "mdns",
    "relay",
    "dcutr",
    "rendezvous",
    "macros",
    "tokio"
]}
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0" 